Update 'go-zsswmxhk' component image to: quay.io/rhtap_qe/go-zsswmxhk:37887c761fa367fe73ae92d507dbe405ef678e28@sha256:280002b1670544d1be3a9d96bd3022f2541b87ba0680bca904c971395182f3cb

--- a/components/go-zsswmxhk/overlays/development/deployment-patch.yaml
+++ b/components/go-zsswmxhk/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zsswmxhk
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zsswmxhk:37887c761fa367fe73ae92d507dbe405ef678e28@sha256:280002b1670544d1be3a9d96bd3022f2541b87ba0680bca904c971395182f3cb
+          name: container-image
